--- a/scss/main.scss
+++ b/scss/main.scss
@@ -397,7 +397,7 @@ main {
 }
 
 #my-background {
-  font-size: 1.5rem;
+  font-size: 11px;
   font-weight: normal;
   line-height: 2;
   letter-spacing: 5px;
