--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -60,7 +60,7 @@
     background-size: contain;
   }
   #my-background {
-    font-size: 1rem;
+    font-size: 11px;
     letter-spacing: 4px;
   }
   
