--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,16 +1,38 @@
 // WIdescreens
 @include mediaXl {
-  #info2 {
-    visibility: hidden;
+  main .introduction .introduction-inner .image .image-inner img {
+    width: 600px;
   }
+
+  .social-media {
+    top: 40%;
+  }
+
+  /* abouut */
+  .bio #about-txt {
+    font-size: 9rem;
+  }
+
+  #my-background {
+    font-size: 20px;
+  }
+
+  .about-info .job ul {
+    font-size: 1.1rem;
+  }
+
+  .about-info .job .dev-sub {
+    font-size: 0.9rem;
+  }
+
   .about-info .job .overlay .library img {
-    width: 20%;
+    width: 10%; //changes
     margin: 2px;
     left: 10rem;
   }
 
   .about-info .job .backend img {
-    width: 11vw;
+    width: 7vw; // changes
     display: block;
     position: relative;
     left: 7rem;
@@ -18,10 +40,30 @@
 
   .about-info .job .tools img {
     display: inline-block;
-    width: 6vw;
+    width: 4vw; //changes
     margin: 10px;
   }
 
+  .career_section .timeline_act {
+    height: 280px;
+  }
+
+  .career_section .timeline_act h3 {
+    font-size: 24px;
+  }
+
+  .career_section .timeline_act .date {
+    font-size: 28px;
+  }
+
+  .career_section .timeline_act h4 {
+    font-size: 16px;
+  }
+
+  /* works */
+  #work-text {
+    font-size: 9rem;
+  }
   .projects {
     grid-template-columns: repeat(3, 1fr);
 
@@ -31,13 +73,22 @@
       font-family: "Gochi Hand", cursive;
     }
   }
+
+  /* contact */
+  #contact-intro .lg-heading #contact-text {
+    font-size: 9rem;
+  }
 }
 
 //DEsktops/laps
 @include mediaLg {
   /* home */
-  #info2 {
-    visibility: hidden;
+  .social-media .icons {
+    margin-top: 1.6rem;
+  }
+
+  .introduction .introduction-inner .image .image-inner img {
+    width: 450px;
   }
 
   /* about */
@@ -78,23 +129,12 @@
   #contact .boxes {
     width: 50vw;
     margin: 2rem auto;
-}
+  }
 }
 
 //Tablets
 @include mediaMd {
   /* homepage */
-  #logo {
-    margin-bottom: 10rem;
-  }
-
-  #info {
-    visibility: hidden;
-  }
-
-  #info2 {
-    font-size: 7rem;
-  }
 
   #home {
     height: 100%;
@@ -117,6 +157,46 @@
     }
     .icons .icon {
       margin-right: 15px;
+    }
+
+    .introduction .introduction-inner .content {
+      width: 50%;
+
+      & .content-inner {
+        width: 100%;
+        text-align: left;
+        margin: 10px 25px;
+
+        h1 {
+          font-size: 3.2rem;
+          line-height: 1.2;
+          width: 300px;
+          margin-bottom: 30px;
+
+          & .line {
+            height: 120px;
+          }
+        }
+
+        p {
+          font-size: 1rem;
+          width: 300px;
+          margin: 10px 0 28px;
+        }
+      }
+
+      & .image {
+        width: 50%;
+        .image-inner {
+          img {
+            width: 450px;
+          }
+        }
+      }
+    }
+
+    .social-media {
+      top: 66%;
     }
   }
 
@@ -181,7 +261,60 @@
 
   .parallax {
     background-position: 50% 50%;
-    background-size: contain;
+    background-size: cover;
+  }
+
+  .career_section blockquote {
+    font-size: 2.3em;
+    width: 75%;
+  }
+
+  .career_section .timeline_act h3 {
+    font-size: 19px;
+  }
+
+  .career_section .timeline_act .date {
+    font-size: 17px;
+  }
+
+  .career_section .timeline_act h4 {
+    font-size: 13px;
+  }
+
+  .career_section .timeline_act {
+    height: 290px;
+  }
+  .career_section .timeline_act:nth-of-type(1) {
+    width: 35%;
+    top: 55%;
+    left: 72%;
+    margin-top: unset;
+  }
+
+  .career_section .timeline_act:nth-of-type(2) {
+    width: 35%;
+    right: 33%;
+    top: 50%;
+    margin-top: 25%;
+  }
+
+  .career_section .timeline_act:nth-of-type(3) {
+    width: 35%;
+    right: 33%;
+    top: 15%;
+    margin-top: 15%;
+  }
+
+  .career_section .timeline_act:nth-of-type(4) {
+    width: 35%;
+    right: 72%;
+    top: 54%;
+    margin-top: unset;
+  }
+
+  #animate_hub {
+    width: 40%;
+    right: -9%;
   }
 
   /* works */
@@ -203,8 +336,14 @@
     padding: 3rem;
   }
 
+  #work .asp .req {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1.6rem;
+  }
+
   #work .asp .req .req-motive {
-    font-size: 25px;
+    font-size: 17px;
     text-align: left;
   }
 
@@ -213,6 +352,14 @@
   #contact-intro {
     left: 20%;
     top: 25%;
+
+    .lg-heading {
+      font-size: 9vw;
+
+      #contact-text {
+        font-size: 4rem;
+      }
+    }
 
     & .sm-heading {
       font-size: 10px;
@@ -233,7 +380,7 @@
   }
 
   .contact-title h2 {
-    font-size: 10px;
+    font-size: 16px;
   }
   #contact .contact-form {
     width: 600px;
@@ -248,42 +395,11 @@
   }
 
   .nav-item .nav-link {
-    // add
     font-size: 2.3rem;
   }
 
   #home {
     height: 100%;
-  }
-
-  #info {
-    visibility: hidden;
-  }
-
-  #info2 {
-    visibility: visible;
-    font-size: 6rem;
-  }
-
-  .home-wrap {
-    display: inline;
-  }
-
-  #logo {
-    margin: 2rem 0;
-  }
-  #home-text {
-    text-align: left;
-    letter-spacing: 1px;
-    margin-top: 100px;
-    font-size: 3.2rem;
-  }
-  #home-text2 {
-    font-size: 3vw;
-    letter-spacing: 3px;
-    margin-top: 20px;
-    text-align: center;
-    padding: 0;
   }
 
   main .icons .icon {
@@ -292,6 +408,45 @@
     height: 40px;
     line-height: 40px;
     margin-right: 15px;
+  }
+
+  main .introduction .introduction-inner .content .content-inner {
+    width: 100%;
+    height: 100%;
+    margin: 5px 20px;
+  }
+
+  main .introduction .introduction-inner .content {
+    width: 50%;
+    text-align: left;
+    margin-top: 100px;
+  }
+
+  main .introduction .introduction-inner .content .content-inner h1 {
+    font-size: 4.3rem;
+    padding: 10px 20px;
+    line-height: 4.8rem;
+    width: 200px;
+
+    .line {
+      height: 150px;
+    }
+  }
+
+  main .introduction .introduction-inner .content .content-inner p {
+    font-size: 0.7rem;
+    width: 200px;
+    margin: 43px 20px;
+  }
+
+  main .introduction .introduction-inner .image .image-inner img {
+    width: 400px;
+    bottom: 50px;
+  }
+
+  main .social-media {
+    width: 350px;
+    top: 80%;
   }
 
   /* about page */
@@ -340,7 +495,7 @@
   }
   .parallax {
     background-position: 50% 50%;
-    background-size: contain;
+    background-size: cover;
   }
 
   & #about .journey {
@@ -349,12 +504,67 @@
     & .timeline {
       padding: 0.2rem;
       font-size: 1rem;
-      width: 200px; 
+      width: 200px;
 
       & p {
         font-size: 9px;
       }
     }
+  }
+  .career_section {
+    padding: 5px 10px;
+  }
+  .career_section blockquote {
+    font-size: 1.6em;
+    width: 71%;
+  }
+
+  .career_section .timeline_act h3 {
+    font-size: 17px;
+  }
+
+  .career_section .timeline_act .date {
+    font-size: 15px;
+  }
+
+  .career_section .timeline_act h4 {
+    font-size: 11px;
+  }
+
+  .career_section .timeline_act {
+    height: 250px;
+  }
+  .career_section .timeline_act:nth-of-type(1) {
+    width: 48%;
+    top: 30%;
+    left: 0;
+  }
+
+  .career_section .timeline_act:nth-of-type(2) {
+    width: 48%;
+    top: 30%;
+    left: 53%;
+    margin-top: unset;
+  }
+
+  .career_section .timeline_act:nth-of-type(3) {
+    width: 48%;
+    top: 68%;
+    left: 0;
+    margin-top: unset;
+  }
+
+  .career_section .timeline_act:nth-of-type(4) {
+    width: 48%;
+    right: 0;
+    left: 53%;
+    top: 68%;
+    margin-top: unset;
+  }
+
+  #animate_hub {
+    width: 50%;
+    right: -50px;
   }
 
   /* Work page */
@@ -390,11 +600,12 @@
       & .req-header {
         font-size: 1.4rem;
       }
-    }
 
-    & p {
-      text-align: center;
-      padding: 15px;
+      & .req-motive {
+        font-size: 15px;
+        text-align: center;
+        padding: 15px 60px;
+      }
     }
   }
   .projects {
@@ -403,6 +614,7 @@
   }
 
   .parallax2 {
+    background-position: 100% 80%;
     height: 200px;
   }
 
@@ -441,12 +653,12 @@
   }
 
   .boxes {
-    margin: 2rem auto; 
+    margin: 2rem auto;
   }
   .boxes ul li {
     font-size: 0.6rem;
     margin-bottom: 10px;
-    float: unset; 
+    float: unset;
   }
   .contact-title h2 {
     font-size: 10px;
@@ -456,6 +668,6 @@
 
   /* footer */
   .footer-profile ul li {
-    font-size: 0.6rem; 
+    font-size: 0.6rem;
   }
 }
