--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,7 @@ body {
   line-height: 1.5;
 }
 
-// Heading
+// Typography
 h1,
 h2,
 h3 {
@@ -54,114 +54,128 @@ header {
   color: #54aa34;
 }
 
-#home {
-  padding: 0;
-}
 main {
   min-height: calc(100vh - 4rem);
 
-
-  #bg {
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-
-  #info {
-    font-family: "Teko", sans-serif;
-    font-size: 18vw;
-    letter-spacing: 15px;
-    margin: 10px 0;
-    padding: 0;
-    fill: #000;
-  }
-
-  #masked {
-    mask: url("#maskLayer");
-  }
-
-  .home-intro {
-    height: 100%;
-    width: 100%;
-    margin: 0 auto;
-
-    & #logo {
-      width: 100%;
-      position: absolute;
-      top: 10%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      margin-top: 6rem;
-      animation: fill 0.5s ease fowards 3.5s;
-    }
-
-    #logo path:nth-child(1) {
-      stroke-dasharray: 534;
-      stroke-dashoffset: 534;
-      animation: design-path 2s ease forwards;
-    }
-    #logo path:nth-child(2) {
-      stroke-dasharray: 309;
-      stroke-dashoffset: 309;
-      animation: design-path 2s ease forwards 0.6s;
-    }
-    #logo path:nth-child(3) {
-      stroke-dasharray: 198;
-      stroke-dashoffset: 198;
-      animation: design-path 2s ease forwards 1.2s;
-    }
-    #logo path:nth-child(4) {
-      stroke-dasharray: 339;
-      stroke-dashoffset: 339;
-      animation: design-path 2s ease forwards 1.8s;
-    }
-    #logo path:nth-child(5) {
-      stroke-dasharray: 377;
-      stroke-dashoffset: 377;
-      animation: design-path 2s ease forwards 2.4s;
-    }
-    #logo path:nth-child(6) {
-      stroke-dasharray: 503;
-      stroke-dashoffset: 503;
-      animation: design-path 2s ease forwards 3s;
-    }
-    #logo path:nth-child(7) {
-      stroke-dasharray: 309;
-      stroke-dashoffset: 309;
-      animation: design-path 2s ease forwards 3.6s;
-    }
-
-    @keyframes design-path {
-      to {
-        stroke-dashoffset: 0;
-        stroke-dasharray: 0;
-        opacity: 0;
-      }
-    }
-
-    @keyframes fill {
-      from {
-        fill: #fff;
-      }
-      to {
-        fill: #34eaff;
-      }
-    }
-  }
-
-  .home-wrap {
-    width: 50%;
-    margin: 0 auto;
+  /* new home GSAP animation */
+  .introduction {
+    height: 100vh;
     position: relative;
-    margin-bottom: 1rem;
+    background: #000;
+    color: #fff;
+
+    .introduction-addition-bg {
+      background: #00b1a7;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      height: 100%;
+    }
+
+    .introduction-bg {
+      background: #000;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      height: 100%;
+    }
+
+    .introduction-inner {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      position: relative;
+      overflow: hidden;
+
+      .content {
+        width: 80%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        .content-inner {
+          width: 60%;
+          margin: 0 auto;
+          h1 {
+            font-size: 3.6rem;
+            line-height: 2.8rem;
+            margin: 32px 0 0;
+            width: 500px;
+            .line {
+              overflow: hidden;
+              height: 70px;
+              position: relative;
+              span {
+                position: absolute;
+              }
+              #p-name {
+                color: #00b1a7;
+              }
+            }
+          }
+          p {
+            font-size: 1.3rem;
+            color: lightgray;
+            letter-spacing: 4px;
+            line-height: 1.4;
+            width: 450px;
+            margin: 32px 0 80px;
+          }
+
+          .btn-row {
+            a {
+              display: inline-block;
+              font-size: 1rem;
+              padding: 10px 30px;
+              text-decoration: none;
+              font-weight: 600;
+              color: #00b1a7;
+              border-radius: 100px;
+              border: 1px solid white;
+              transition: 0.6s linear ease-in;
+              &:hover {
+                background: white;
+                color: black;
+              }
+            }
+          }
+        }
+      }
+      .image {
+        position: relative;
+        width: 40%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        .image-inner {
+          img {
+            width: 500px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 1;
+          }
+        }
+      }
+    }
   }
 
-  #home-text2 {
-    color: #00b1a7;
-    margin-bottom: 0.4rem;
+  .social-media {
+    width: 700px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    margin: auto;
+    opacity: 0;
   }
 
   .icons {
@@ -196,7 +210,6 @@ main {
         left: 0;
         right: 0;
         border-radius: 100%;
-        background: lightsteelblue;
         z-index: -1;
       }
 
@@ -286,7 +299,7 @@ main {
 
 /* about scss */
 #about-body {
-  background: #fff;
+  background: #000;
 }
 
 #about {
@@ -294,16 +307,16 @@ main {
 }
 
 .parallax {
-  background-image: url("../img/randy4v.png");
+  background-image: url("../img/code.jpg");
   background-attachment: fixed;
-  height: 100vh;
+  height: 300px;
   background-position: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 #my-background {
-  font-size: 15px;
+  font-size: 17px;
   font-weight: normal;
   line-height: 2;
   letter-spacing: 1px;
@@ -316,8 +329,7 @@ main {
   }
 
   & .dev-lang {
-    color: black;
-    text-shadow: #fff;
+    color: #ffff;
     font-weight: 900;
     letter-spacing: 5px;
   }
@@ -346,7 +358,6 @@ main {
     grid-area: bio;
     color: dimgrey;
   }
-
 
   #skill-txt {
     font-size: 8vw;
@@ -385,7 +396,7 @@ main {
     color: dimgray;
 
     .dev-main {
-      font-size: 2.5rem;
+      font-size: 1.5rem;
       text-align: center;
       border-bottom: 1px solid #bdb8a9;
       padding-bottom: 1rem;
@@ -395,7 +406,7 @@ main {
       text-align: center;
       font-family: open sans-serif;
       font-style: italic;
-      font-size: 1rem;
+      font-size: 0.7rem;
       letter-spacing: 3px;
       padding: 1rem;
     }
@@ -407,12 +418,12 @@ main {
     ul {
       list-style: none;
       display: inline-block;
-      font-size: 1.9rem;
+      font-size: 0.9rem;
       text-transform: uppercase;
     }
 
     li {
-      color: black;
+      color: #fff;
       opacity: 0.9;
       letter-spacing: 4px;
     }
@@ -430,12 +441,12 @@ main {
       transition: 0.3s ease;
       background-color: rgba(0, 0, 0, 0.8);
       & .core-img img {
-        width: 100%;
+        width: 50%; // chnages
         display: block;
       }
 
       & .library img {
-        width: 20%;
+        width: 5%;
         display: block;
         position: relative;
         left: 7.5rem;
@@ -452,125 +463,18 @@ main {
     }
 
     & .backend img {
-      width: 13vw;
-      display: block;
+      width: 5vw;
+      display: inline-block;
       position: relative;
       left: 7rem;
     }
 
     & .tools img {
       display: inline-block;
-      width: 7vw;
+      width: 4vw; // changes
       margin: 10px;
     }
   }
-}
-
-
-.journey {
-  padding: 10rem;
-  width: 50vw;
-  margin: 40px auto;
-  padding: 10px 20px 10px 20px;
-  border-left: 2px solid $secondary-color;
-
-  & span {
-    font-family: sans-serif fantasy;
-    color: $secondary-color;
-
-    &:hover {
-      @include easeOut;
-      opacity: 0.8;
-      color: black;
-    }
-  }
-
-  & .timeline::before {
-    content: "";
-    display: block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #000;
-    border: 2px solid #f5f3ed;
-    position: absolute;
-    top: 7px;
-    left: -29px;
-  }
-
-  & .timeline {
-    background-color: peachpuff;
-    padding: 0.8rem;
-    margin-bottom: 1.6rem;
-    border: 2px solid transparent;
-    line-height: 1;
-    letter-spacing: 1px;
-    position: relative;
-    color: black;
-    border-radius: 9px;
-    box-shadow: 0px 9px 14px 5px #313131;
-
-    & p {
-      font-family: sans-serif;
-      font-weight: 400;
-      font-size: 11px;
-    }
-
-    & button {
-      width: 150px;
-      border: none;
-      border-radius: 10px;
-      background: black;
-      overflow: hidden;
-      padding: 0.7rem 0.25rem;
-      box-shadow: 2px 1px 5px #000;
-
-      & span {
-        display: flex;
-        width: 200%;
-        transition: 0.25s ease-in-out;
-
-        & i,
-        strong {
-          flex: 1 0 50%;
-          color: white;
-          font-size: 11px;
-        }
-        &:hover {
-          transform: translateX(-50%);
-        }
-      }
-    }
-
-    #resume:hover {
-      background: transparent;
-    }
-  }
-  & .timeline::after {
-    content: "";
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 8px;
-    border-color: transparent #000 transparent transparent;
-    position: absolute;
-    top: 7px;
-    left: -17px;
-  }
-}
-.journey .timeline:hover {
-  @include easeOut;
-  color: black;
-  font-weight: 900;
-}
-#para {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 100%;
-  transform: translateY(-50%);
-  font-size: 1.3em;
 }
 
 .section {
@@ -585,9 +489,118 @@ main {
   opacity: 0;
 }
 
+/* REFINED */
+.career_section {
+  padding: 3em;
+  height: 100vh;
+  position: relative;
+  box-sizing: border-box;
+  color: dimgrey;
+  margin-bottom: 150px;
+
+  blockquote {
+    font-size: 2.3em;
+    width: 30%;
+    margin-top: 3%;
+    position: absolute;
+
+    #spanny {
+      width: 100%;
+      background: red;
+      display: block;
+      height: 5px;
+      margin-top: 20px;
+    }
+  }
+
+  .timeline_act {
+    position: absolute;
+    /*     background: #00b1a7; */
+    background: #fff;
+    text-align: left;
+    padding: 1.4em;
+    box-shadow: 0px 1px 7px 2px dimgrey;
+    transition: 0.6s linear ease-in;
+    &:hover {
+      background: dimgrey;
+      color: #fff;
+      cursor: pointer;
+    }
+  }
+
+  .timeline_act i.fa {
+    color: #00b1a7;
+    padding-right: 10px;
+    transition: 0.6s linear ease-in;
+  }
+
+  .timeline_act h3,
+  h4,
+  p {
+    color: black;
+  }
+
+  .timeline_act h3 {
+    font-size: 20px;
+    letter-spacing: 1px;
+  }
+
+  .timeline_act .date {
+    font-size: 24px;
+    font-family: "Gochi Hand", cursive;
+  }
+
+  .timeline_act h4 {
+    font-size: 16px;
+    font-weight: 300;
+  }
+
+  .timeline_act:nth-of-type(1) {
+    width: 25%;
+    right: 5%;
+    top: 55%;
+  }
+  .timeline_act:nth-of-type(2) {
+    width: 25%;
+    right: 35%;
+    top: 50%;
+    margin-top: 20%;
+  }
+  .timeline_act:nth-of-type(3) {
+    width: 25%;
+    right: 35%;
+    top: 15%;
+    margin-top: 15%;
+  }
+  .timeline_act:nth-of-type(4) {
+    width: 25%;
+    right: 65%;
+    top: 30%;
+    margin-top: 15%;
+  }
+}
+.sticky {
+  background: #000 !important;
+}
+.detail-info {
+  text-align: center;
+}
+
+#animate_hub {
+  width: 25%;
+  height: 30%;
+  position: absolute;
+  border: 5px solid #00b1a7;
+  opacity: 0.3;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  transform: translate(-50%, 50%);
+}
 
 /* Portfolio / Works */
-
 #wrapper-header {
   position: relative;
   display: flex;
@@ -655,7 +668,7 @@ main {
 }
 
 .parallax2 {
-  background-image: url("../img/do.jpg");
+  background-image: url("../img/workhard.jpg");
   background-attachment: fixed;
   height: 400px;
   background-position: 100% 100%;
@@ -747,7 +760,7 @@ main {
     width: 100%;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 2;
+    z-index: 1;
     padding: 20px;
 
     p {
@@ -827,6 +840,7 @@ main {
     & .req-header {
       font-size: 2rem;
       color: burlywood;
+      font-family: "Gochi Hand", cursive;
 
       & .nbr {
         color: #cecece;
@@ -836,9 +850,10 @@ main {
     }
 
     & .req-motive {
-      font-size: 15px;
+      font-size: 18px;
       width: 100%;
       height: auto;
+      font-weight: 400;
     }
 
     &:hover {
@@ -852,10 +867,36 @@ main {
 }
 
 /* Contact section with wallpaper */
+.con-introduction {
+  height: 100vh;
+  position: relative;
+  background: #fafefe;
+  color: #fff;
+
+  .con-introduction-addition-bg {
+    background: #00b1a7;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+  }
+
+  .con-introduction-bg {
+    background: #fafefe;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+}
+
 .contact-section {
   position: relative;
   width: 100%;
-  height: 1700px;
+  height: 100vh;
   background: url("../img/bb.jpg");
   background-attachment: fixed;
   background-size: cover;
@@ -875,25 +916,25 @@ main {
     letter-spacing: 15px;
     margin: 0;
 
-     #contact-text {
-     font-size: 6rem;
-     font-weight: 700;
-     margin-left: -20px;
-     letter-spacing: -2px;
+    #contact-text {
+      font-size: 6rem;
+      font-weight: 700;
+      margin-left: -20px;
+      letter-spacing: -2px;
+    }
   }
-}
 
-.sm-heading {
+  .sm-heading {
     font-size: 20px;
     letter-spacing: 15px;
     margin: 0;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
       sans-serif;
- }
+  }
 }
 
 .personal-infobox {
-  animation: FadeIn 5s;
+  animation: FadeIn 0.5s;
   @include easeOut;
 }
 @keyframes FadeIn {
@@ -906,7 +947,7 @@ main {
 }
 
 .boxes {
-  width: 50vw; 
+  width: 50vw;
   margin: 2rem auto;
 
   & ul {
@@ -915,11 +956,11 @@ main {
   }
 
   li {
-    font-size: 15px;
+    font-size: 25px;
     text-align: center;
     border-left: 3px solid #fff;
-    background: rgba(0, 0, 0, 0.4);
-    background: linear-gradient(to right, #2121 50%, #00b1a7 50%);
+    background: rgba(9, 1, 1, 0.4);
+    background: linear-gradient(to right, #000 50%, #00b1a7 50%);
     background-size: 200% 100%;
     background-position: left bottom;
     margin-left: 10px;
@@ -938,24 +979,43 @@ main {
     }
   }
 }
+
+#resume {
+  text-align: center;
+  a {
+    display: inline-block;
+    font-size: 1rem;
+    padding: 10px 30px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #00b1a7;
+    border-radius: 100px;
+    border: 1px solid #00b1a7;
+    transition: 0.6s linear ease-in;
+    &:hover {
+      background: #00b1a7;;
+      color: black;
+    }
+  }
+}
 /* new contact */
-
 #contact {
-  background: url("../img/contact.jpg");
-  background-size: 100% 100%;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
   padding: 4rem;
-
+  height: 100%;
 
   & .contact-title {
     margin-top: 50px;
     text-align: center;
+    font-family: "Gochi Hand", cursive;
 
     #contact-heading {
       font-size: 10vw;
-      color: ghostwhite;
-      opacity: .2;
+      color: #57b1a7;
+      opacity: 0.9;
+    }
+
+    h2 {
+      color: grey;
     }
   }
 
@@ -964,7 +1024,7 @@ main {
     margin: 0 auto;
 
     & form {
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.9);
       margin-top: 50px;
       padding: 3rem;
       transition: all 4s ease-in-out;
@@ -1024,7 +1084,7 @@ main {
 
       &:hover {
         background: $primary-color;
-        color: #fff;
+        color: #00b1a7;
         cursor: pointer;
         letter-spacing: 2px;
         transition: all 0.3s;
@@ -1064,13 +1124,13 @@ main {
 }
 #main-footer {
   padding: 0.3rem;
-  background: rgba(255, 255, 255, 1);
-  color: $secondary-color;
+  background: #00020c;
+  color: #fff;
   height: 100%;
   margin-top: 1.3rem;
 
   &:hover {
-    color: $primary-color;
+    color: dimgrey;
     @include easeOut;
     cursor: pointer;
     transition-delay: all 0, 5s;
@@ -1092,5 +1152,4 @@ main {
     margin-top: 10px;
   }
 }
-
 @import "mobile";
